--- a/Chris/Config/DefaultEngine.ini
+++ b/Chris/Config/DefaultEngine.ini
@@ -74,3 +74,12 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [OnlineSubsystem]
 DefaultPlatformService=Null
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+-TargetedRHIs=PCD3D_SM5
+-TargetedRHIs=PCD3D_SM4
++TargetedRHIs=PCD3D_SM5
++TargetedRHIs=PCD3D_SM4
+MinimumOSVersion=MSOS_Vista
+
+
