--- a/Chris/Config/DefaultGame.ini
+++ b/Chris/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C6A8CE544B75B5653265EE8B5B179B2F
-ProjectName=First Person BP Game Template
+ProjectName=Unreal Shooter
+CompanyName=322PGaming
 
 [StartupActions]
 bAddPacks=True
