--- a/Chris/Saved/Config/Windows/Engine.ini
+++ b/Chris/Saved/Config/Windows/Engine.ini
@@ -1,19 +1,14 @@
 [Core.System]
 Paths=../../../Engine/Content
-<<<<<<< HEAD
 Paths=G:/Unreal Projects/UnrealChris/Chris/Content
-Paths=../../../Engine/Plugins/2D/Paper2D/Content
-Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
-
-=======
-Paths=../../../../../GitHub/Unreal/UnrealChris/Chris/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+FlipNormalMapGreenChannel=False
+None=======
 
->>>>>>> origin/master
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path=)
 NDKPath=(Path=)
@@ -29,10 +24,4 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
-<<<<<<< HEAD
-[/Script/UnrealEd.EditorEngine]
-FlipNormalMapGreenChannel=False
-
-=======
->>>>>>> origin/master
 
